[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/Player.gd" type="Script" id=1]
[ext_resource path="res://World/GUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Player/OrangeFish.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bubble.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.9998
height = 94.0

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 0.1, 9, 2 )
flag_disable_z = true
gravity = Vector3( 90, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2( 17, 4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="GUI" type="CanvasLayer" parent="." groups=[
"GUI",
]]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="ColorRect" parent="GUI/Control"]
margin_left = 5.0
margin_top = 5.0
margin_right = 30.0
margin_bottom = 30.0
color = Color( 0.898039, 0.145098, 0.145098, 0.721569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart2" type="ColorRect" parent="GUI/Control"]
margin_left = 34.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 30.0
color = Color( 0.898039, 0.145098, 0.145098, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart3" type="ColorRect" parent="GUI/Control"]
margin_left = 63.0
margin_top = 5.0
margin_right = 88.0
margin_bottom = 30.0
color = Color( 0.898039, 0.145098, 0.145098, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
position = Vector2( 54, 78 )
scale = Vector2( 3.7, 3.7 )
texture = ExtResource( 3 )

[node name="BackParticles" type="Particles2D" parent="Body"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 110, 0 )
emitting = false
amount = 4
process_material = SubResource( 2 )
texture = ExtResource( 4 )
